--- a/git/app/index.html
+++ b/git/app/index.html
@@ -115,7 +115,7 @@
 					<p><i class="fa fa-map-marker"></i> 宇宙某个角落</p>
 					<!--<p><i class="fa fa-phone"></i> 136****0619</p>-->
 					<p><i class="fa fa-envelope"></i> 372664268@qq.com</p>
-					<p><i class="fa fa-globe"></i> tvpop.github.io</p>
+					<p><i class="fa fa-globe"></i> www.tvpop.xyz</p>
 			</div>
 		</div>
 		<div class="col-md-8 col-sm-12">
