--- a/git/app/index.html
+++ b/git/app/index.html
@@ -88,7 +88,12 @@
 					<div class="education-content">
 						<h4 class="education-title accent"></h4>
 
-							大学本科毕业，多年的it从业经验，曾在某大型it公司工作，参与数千万数据量的系统研发，也担任过项目管理角色，对it的理解很深入。自己很懂技术也乐于分享技术，并且由于拥有出色的表达能力和管理能力，帮助过很多人成功找到php开发的工作。想学习php技术可以联系我的邮箱，现在收徒，线上教学指导，学费2000元。
+							高中时就在两个世界五百强企业工作过！<br/>
+大学毕业后就在某互联网大厂工作过！<br/>
+是很牛逼吧，<br/>
+而且还是真的，<br/>
+前面那个是在麦当劳肯德基工作，<br/>
+后面那个是在软件外包公司工作~~~
 					</div>
 			</div>
 		</div>
