--- a/git/app/index.html
+++ b/git/app/index.html
@@ -88,12 +88,14 @@
 					<div class="education-content">
 						<h4 class="education-title accent"></h4>
 
-							高中时就在两个世界五百强企业工作过！<br/>
+							高中时就在某世界五百强企业工作过！<br/>
 大学毕业后就在某互联网大厂工作过！<br/>
 是很牛逼吧，<br/>
+是的，<br/>
 而且还是真的，<br/>
-前面那个是在麦当劳肯德基工作，<br/>
-后面那个是在软件外包公司工作~~~
+前面那个是在麦当劳工作，<br/>
+后面那个是在一个软件人力外包公司，<br/>
+外派到大厂工作~~~
 					</div>
 			</div>
 		</div>
