--- a/git/tpl/article.html
+++ b/git/tpl/article.html
@@ -42,7 +42,8 @@
 		<div class="col-md-8 col-sm-12">
 			<div class="about">
 				<h3 class="accent">{{$article["title"]}}</h3>
-				<small>{{$article["author"]}} |{{$article["from"]}} |{{$article["tag"]}} </small>
+				<!--<small>{{$article["author"]}} |{{$article["from"]}} |{{$article["tag"]}} </small>-->
+				<small></small>
 				<p style="font-size:18px;font-family:微软雅黑;">
 				{{$article["body"]}}
 				</p>
