--- a/git/app/index.html
+++ b/git/app/index.html
@@ -94,8 +94,8 @@
 是的，<br/>
 而且还是真的，<br/>
 前面那个是在麦当劳工作，<br/>
-后面那个是在一个软件人力外包公司，<br/>
-外派到大厂工作~~~
+后面那个是在软件人力外包公司，<br/>
+外派到大厂工作。
 					</div>
 			</div>
 		</div>
