修改文章内容

--- a/git/app/2020-11-19-20-27-06.html
+++ b/git/app/2020-11-19-20-27-06.html
@@ -45,7 +45,7 @@
 				<!--<small>tvpop |tvpop |程序人生 </small>-->
 				<small></small>
 				<p style="font-size:18px;font-family:微软雅黑;">
-				<p><br/></p><p>我是一个程序员，在公司除了码代码，还做打杂的活。</p><p>打杂那么坑，至于为什么不跳槽，那是因为不好跳槽。</p><p>会编程的人太多了，我也承认自身技术能力不好，找不到工资高的工作。</p><p>而且我相信以后编程可能会是一个人人都要学的技能，像数学那样，锻炼思维。</p><p>目前工资对于自己来说还算满意，偶尔打打杂也不会不满意。</p><p>同时我现在的老板总是说不设限，我也有些认同这说法。</p><p>虽然对老板来说员工不设限，能做几个人的岗位，那他就可以少招人，</p><p>但是我知道工作的难找，觉得不设限，多做多学一些总有好处，至少能有多些选择。</p><p>有些公司要求专业，专注某个技能，有些公司却要求学得杂，综合素质高。</p><p>我们没可能满足所有公司的要求。</p><p>唯有且行且珍惜，多学多做无妨，把握机会赚钱，不轻易辞职，做跟钱过不去的事情。</p><p>希望有朝一日编程只是我的兴趣，而不是要靠它生存的技能。</p><p><br/></p>
+				<p><br/></p><p>我是一个程序员，在公司除了码代码，还做打杂的活。</p><p>打杂那么坑，至于为什么不跳槽，那是因为不好跳槽。</p><p>会编程的人太多了，我也承认自身技术能力不好，找不到工资高的工作。</p><p>而且我相信以后编程可能会是一个人人都要学的技能，像数学那样，锻炼思维。</p><p>目前工资对于自己来说还算满意，偶尔打打杂也不会不满意。</p><p>同时我现在的老板总是说不设限，我也有些认同这说法。</p><p>虽然对老板来说员工不设限，能做几个人的岗位，那他就可以少招人，</p><p>但是我知道工作的难找，觉得不设限，多做多学一些总有好处，至少能有多些选择。</p><p>有些公司要求专业，专注某个技能，有些公司却要求学得杂，综合素质高。</p><p>我们没可能满足所有公司的要求。</p><p>唯有且行且珍惜，多学多做无妨，把握机会赚钱，不轻易辞职，不做跟钱过不去的事情。</p><p>希望有朝一日编程只是我的兴趣，而不是要靠它生存的技能。</p><p><br/></p>
 				</p>
 			</div>
 		</div>
