--- a/git/app/2020-12-30-11-47-56.html
+++ b/git/app/2020-12-30-11-47-56.html
@@ -41,7 +41,7 @@
 	<div class="row">
 		<div class="col-md-8 col-sm-12">
 			<div class="about">
-				<h3 class="accent">锻炼身体和工作学习同样是很重要</h3>
+				<h3 class="accent">锻炼身体很重要</h3>
 				<!--<small>tvpop |tvpop |锻炼身体 </small>-->
 				<small></small>
 				<p style="font-size:18px;font-family:微软雅黑;">
