--- a/git/app/2021-01-14-10-39-29.html
+++ b/git/app/2021-01-14-10-39-29.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title><br />
-<b>Notice</b>:  Undefined index: name in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>29</b><br />
-</title>
+	<title>一个头发浓密的程序员</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
@@ -31,12 +29,8 @@
 			<div class="col-md-12 col-sm-12">
 				<img src="../theme/images/tm-easy-profile.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
 				<hr>
-				<h1 class="tm-title bold shadow"><br />
-<b>Notice</b>:  Undefined index: name in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>57</b><br />
-</h1>
-				<h1 class="white bold shadow"><br />
-<b>Notice</b>:  Undefined index: email in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>59</b><br />
-</h1>
+				<h1 class="tm-title bold shadow">一个头发浓密的程序员</h1>
+				<h1 class="white bold shadow"></h1>
 			</div>
 		</div>
 	</div>
@@ -47,31 +41,11 @@
 	<div class="row">
 		<div class="col-md-8 col-sm-12">
 			<div class="about">
-				<h3 class="accent"><br />
-<b>Notice</b>:  Undefined index: article in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>71</b><br />
-<br />
-<b>Notice</b>:  Trying to get property of non-object in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>71</b><br />
-</h3>
-				<!--<small><br />
-<b>Notice</b>:  Undefined index: article in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>73</b><br />
-<br />
-<b>Notice</b>:  Trying to get property of non-object in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>73</b><br />
- |<br />
-<b>Notice</b>:  Undefined index: article in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>74</b><br />
-<br />
-<b>Notice</b>:  Trying to get property of non-object in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>74</b><br />
- |<br />
-<b>Notice</b>:  Undefined index: article in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>75</b><br />
-<br />
-<b>Notice</b>:  Trying to get property of non-object in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>75</b><br />
- </small>-->
+				<h3 class="accent">有必要提升学历吗</h3>
+				<!--<small>tvpop |tvpop |提升学历 </small>-->
 				<small></small>
 				<p style="font-size:18px;font-family:微软雅黑;">
-				<br />
-<b>Notice</b>:  Undefined index: article in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>79</b><br />
-<br />
-<b>Notice</b>:  Trying to get property of non-object in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>79</b><br />
-
+				<p><br/></p><p>自己是一个小公司的苦逼程序员，什么都有机会接触到，偶尔有机会看到了自己公司的hr邮箱里面的应聘简历。</p><p>看了好几十封简历，五花八门的简历，对于一些长长的工作经验，项目经验已经视觉疲累了，选择性的跳过。</p><p>之前我觉得学历不重要，工作经验项目经验更重要，现在似乎不这么认为了。</p><p>那是因为在很多简历都写着工作经验，项目经验，因为只要你是一个社会人，要生存就不可能没有工作经验，项目经验。</p><p>而且这些写着的这些经历和经验还容易造假，分不出来。</p><p>那这样子就很难使自己的简历让人眼前一亮，让面试官觉得你是一个人才。</p><p>我认为比较好的解决办法就是投资自己，花点钱去提升学历。</p><p>不一定要报培训班学习，根据经济能力选择适合自己的学习方式。</p><p>学历提升了，工作经验项目经验这些三言两语带过，面试的时候表现得谦虚好学一些，我觉得会很受好公司的欢迎。</p><p>那些非常看重项目经验和能力的公司一般是小公司，创业公司，苦逼不说，钱还不多，好一点的公司看重的是潜力。</p><p>并且工作经验太多人有了，而高学历比如研究生学历，博士学历倒是少数人有，不会廉价。</p><p>不能觉得自己是一个打工的人，只能赚点钱，不能花点钱去学习。</p><p>要把自己当作是一个老板，根据市场情况再决定用钱投资到增值自己，找个好工作，还是投资到开店做小生意。</p><p>至于学习是不是最低成本的投资，这个就不一定吧。</p><p>但是通过花钱学习投资自己，就比较稳定，风险没那么大。</p><p>总之，对于想做白领，找一个好工作的人，我觉得还是有必要提升学历，提升竞争力，但是就要根据经济能力选择学习方式。</p><p><br/></p>
 				</p>
 			</div>
 		</div>
