--- a/git/app/2021-04-15-15-48-55.html
+++ b/git/app/2021-04-15-15-48-55.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title><br />
-<b>Notice</b>:  Undefined index: name in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>29</b><br />
-</title>
+	<title>一个头发浓密的程序员</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
@@ -31,12 +29,8 @@
 			<div class="col-md-12 col-sm-12">
 				<img src="../theme/images/tm-easy-profile.jpg" class="img-responsive img-circle tm-border" alt="templatemo easy profile">
 				<hr>
-				<h1 class="tm-title bold shadow"><br />
-<b>Notice</b>:  Undefined index: name in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>57</b><br />
-</h1>
-				<h1 class="white bold shadow"><br />
-<b>Notice</b>:  Undefined index: email in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>59</b><br />
-</h1>
+				<h1 class="tm-title bold shadow">一个头发浓密的程序员</h1>
+				<h1 class="white bold shadow"></h1>
 			</div>
 		</div>
 	</div>
@@ -47,31 +41,11 @@
 	<div class="row">
 		<div class="col-md-8 col-sm-12">
 			<div class="about">
-				<h3 class="accent"><br />
-<b>Notice</b>:  Undefined index: article in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>71</b><br />
-<br />
-<b>Notice</b>:  Trying to get property of non-object in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>71</b><br />
-</h3>
-				<!--<small><br />
-<b>Notice</b>:  Undefined index: article in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>73</b><br />
-<br />
-<b>Notice</b>:  Trying to get property of non-object in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>73</b><br />
- |<br />
-<b>Notice</b>:  Undefined index: article in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>74</b><br />
-<br />
-<b>Notice</b>:  Trying to get property of non-object in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>74</b><br />
- |<br />
-<b>Notice</b>:  Undefined index: article in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>75</b><br />
-<br />
-<b>Notice</b>:  Trying to get property of non-object in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>75</b><br />
- </small>-->
+				<h3 class="accent">全新开发or二次开发</h3>
+				<!--<small>tvpop |tvpop |tvpop </small>-->
 				<small></small>
 				<p style="font-size:18px;font-family:微软雅黑;">
-				<br />
-<b>Notice</b>:  Undefined index: article in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>79</b><br />
-<br />
-<b>Notice</b>:  Trying to get property of non-object in <b>E:\vblog\git\tpl\cache\1e288c6d9210c324a2a30948766e5501c81d0f38_0.file.article.html.php</b> on line <b>79</b><br />
-
+				<p><br/></p><p>最近老板要求做一个企业网站，</p><p>刚好我最近又喜欢上wordpress框架，</p><p>于是有考虑用<span style="white-space: normal;">wordpress做。</span></p><p><span style="white-space: normal;">如果用<span style="white-space: normal;">wordpress做那就省事多了，</span></span></p><p><span style="white-space: normal;"><span style="white-space: normal;">只需要套一下模板就行。</span></span></p><p><span style="white-space: normal;"><span style="white-space: normal;">如果用ThinkPHP那就费事了，</span></span></p><p><span style="white-space: normal;"><span style="white-space: normal;">全新开发，什么功能都自己来。</span></span></p><p>看需求吧，</p><p>对于做企业网站，</p><p>我觉得wordpress更好，</p><p>虽然锻炼技术的话，</p><p>用ThinkPHP更好，</p><p>但是我都试过从头开始开发了，</p><p>还是用<span style="white-space: normal;">wordpress吧。</span></p><p><span style="white-space: normal;"><br/></span></p>
 				</p>
 			</div>
 		</div>
